# Saur_fr_client

./: .gitignore  README.md  aide-memoire.md  pyproject.toml  simple_client.py
saur_client/: __init__.py  __init__.pyi  _version.py  _version.pyi  saur_client.py  saur_client.pyi
