[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"] # Assurez-vous que setuptools_scm est là
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "saur_client/_version.py"
local_scheme = "no-guess-dev" # Optionnel : pour gérer les versions de développement

[project]
name = "saur_client"
dynamic = ["version"]
description = "Client Python pour interagir avec l'API SAUR"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Cekage Dave", email = "github@cekage.net" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
]



[project.urls]
"Homepage" = "https://github.com/cekage/Saur_fr_client"
"Bug Tracker" = "http://github.com/cekage/Saur_fr_client/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "def __eq__",
    "def __len__",
    "def __lt__",
    "def __gt__",
    "return NotImplemented",
    "if TYPE_CHECKING:",
    "logger.debug\\(.*",
    "\\.{3}",
]
